End-to-End DID resolution and authorization working